test/error/0003-junkinclude.c
/*
PATTERN: bar
PATTERN: junk
*/

#include "0003-junkinclude.c" bar
